--- a/app/views/simple_calendar/_score_calendar.html.erb
+++ b/app/views/simple_calendar/_score_calendar.html.erb
@@ -56,20 +56,8 @@
     </div>
   </div>
 </div>
-<!-- modal_start -->
+<!-- modal -->
 <div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="label1" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="label1">Modal title</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        Modal body
-      </div>
-    </div>
   </div>
 </div>
-<!-- modal_end -->
