--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,6 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg navbar-light container-xl">
     <h1 class="navbar-brand"><%= link_to "売上管理", root_path %></h1>
+    <%= link_to 'シフト管理', new_schedule_path %>
     <ul class="navbar-nav ml-auto">
       <li class="nav-item dropdown">
         <a class="nav-link fas fa-user-circle fa-2x" href="#" data-toggle='dropdown' aria-haspopup='true' aria-expanded='false' id='header-profile'></a>
