add: シフト登録ページを作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,5 +22,6 @@
 @import "scores";
 @import "users";
 @import "score_details";
+@import "schedules";
 @import "font-awesome-sprockets";
 @import "font-awesome";
