--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -73,6 +73,13 @@ body {
     .btn {
       margin: 1rem 0;
     }
+    a {
+      display: block;
+    }
+    .app-title {
+      color: #007bff;
+      font-weight: bold;
+    }
   }
 }
 
