--- a/app/views/schedules/new.html.erb
+++ b/app/views/schedules/new.html.erb
@@ -6,7 +6,7 @@
         <% if schedule.present? %>
           <div class="shift-selector-wrapper">
             <%= form_with model: schedule do |f| %>
-              <%= f.select :shift, Schedule.shifts_i18n.invert.keys, { selected: schedule.shift_i18n }, class: 'shift-selector' %>
+              <%= f.select :shift, {'隔勤': 0, '日勤': 1, '夜勤': 2}, { selected: Schedule.shifts[schedule.shift] }, class: [schedule.work_on, 'shift-selector'] %>
             <% end %>
           </div>
         <% end %>
@@ -17,8 +17,8 @@
   <div class="col-12 shift-form">
     <%= form_with url: schedules_path, class: 'schedule-form' do |f| %>
       <% @schedules.each do |schedule| %>
-        <%= f.hidden_field "schedules[][work_on]", value: schedule.work_on %>
-        <%= f.hidden_field "schedules[][shift]", value: schedule.shift %>
+        <%= f.hidden_field "schedules[][work_on]", value: schedule.work_on, class: [schedule.work_on, 'work-on']  %>
+        <%= f.hidden_field "schedules[][shift]", value: schedule.shift, class: [schedule.work_on, 'shift'] %>
       <% end %>
       <%= f.submit %>
     <% end %>
