--- a/app/views/simple_calendar/_score_calendar.html.erb
+++ b/app/views/simple_calendar/_score_calendar.html.erb
@@ -43,15 +43,25 @@
     </tbody>
   </table>
 </div>
-<div class="score-status">
+<div class="status">
   <div class="row">
-    <div class="calculated-score-field col-12">
+    <div class="status-field-wrapper col-12">
       <h3><%= t('date.month_names')[date_range.last.month] + '度' %></h3>
-      <div class="total-score">
-        <p>合計:</p> <p class="total-score-result"><%= "#{@scores_in_current_month.calc_total_score} 円" %></p>
-      </div>
-      <div class="average-score">
-        <p>平均:</p> <p class="average-score-result"><%= "#{@scores_in_current_month.calc_average_score} 円" %></p>
+      <div class="status-field">
+        <div class="score-status">
+          <div class="total-score">
+            <p>合計:</p> <p class="total-score-result"><%= "#{@scores_in_current_month.calc_total_score} 円" %></p>
+          </div>
+          <div class="average-score">
+            <p>平均:</p> <p class="average-score-result"><%= "#{@scores_in_current_month.calc_average_score} 円" %></p>
+          </div>
+        </div>
+        <div class="line"></div>
+        <div class="schedule-status">
+          <div class="work-days-count">
+            <p>出番数:</p> <p class="work-days-count-result"><%= @schedules.count_work_days %> 出番</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
