--- a/app/assets/stylesheets/schedules.scss
+++ b/app/assets/stylesheets/schedules.scss
@@ -24,6 +24,22 @@
   }
 }
 
+.schedule-form-area-wrapper {
+  padding: 0 0.5rem;
+  .schedule-form-area {
+    min-height: 4rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: white;
+    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.05);
+    .work-count {
+      margin: 0;
+      color: rgb(0, 123, 255);
+    }
+  }
+}
+
 .schedule-modal {
   .modal-header {
     padding: 5px 1rem;
