--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -22,6 +22,18 @@ body {
       padding-left: 0.5rem;
     }
   }
+  .navbar-nav li {
+    width: max-content;
+    margin: auto;
+    color: white;
+  }
+  .navbar-nav li:hover {
+    text-decoration: underline;
+  }
+  .navbar-nav li > a {
+    font-size: 1rem;
+    color: white;
+  }
   .nav-link {
     color: white!important;
   }
